# PX4-Tanh-Controller

./: README.md  推导.md
src/figure8_path_publisher/: CMakeLists.txt  package.xml
src/figure8_path_publisher/config/: figure8_path_publisher.yaml
src/figure8_path_publisher/include/figure8_path_publisher/: figure8_path_publisher_node.hpp
src/figure8_path_publisher/launch/: figure8_path_publisher.launch.py
src/figure8_path_publisher/src/: figure8_path_publisher_node.cpp
src/tanh_controller/: CMakeLists.txt  package.xml
src/tanh_controller/config/: tanh_controller.yaml
src/tanh_controller/include/tanh_controller/: tanh_controller.hpp  tanh_controller_node.hpp
src/tanh_controller/launch/: tanh_controller.launch.py  tanh_with_figure8.launch.py
src/tanh_controller/src/: tanh_controller.cpp  tanh_controller_node.cpp
